<resources>
    <string name="app_name">SetAsRingtones</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="banner_ad_unit_id">ca-app-pub-3496850410889255/3095954829</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3496850410889255/1591301460</string>

    <string name="title_latest">Latest</string>
    <string name="title_best">Best</string>
    <string name="title_top">Top</string>
    <string name="title_home">Home</string>
    <string name="title_channel">Channel</string>
    <string name="title_category">Categories</string>
    <string name="title_settings">Settings</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general">General</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="contact_us">Contact us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="push_notification">Push Notification</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="set_as_ringtone">Set As Ringtone</string>
    <string name="set_as">Set as</string>
    <string name="share">Share</string>
    <string name="related_ringtones">Related Ringtones</string>
    <string name="ringtone">Ringtone</string>
    <string name="message">Message</string>
    <string name="alarm">Alarm</string>
    <string name="no_data">No data</string>
    <string name="download">Download</string>
</resources>