<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@+id/home_fragment"
    android:id="@+id/nav_graph">
    <fragment
        android:id="@+id/home_fragment"
        android:name="com.wmt.setasringtones.fragments.bottomNav.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
<!--        <action-->
<!--            android:id="@+id/action_home_fragment"-->
<!--            app:destination="@id/channel_fragment"-->
<!--            app:popUpTo="@+id/home_fragment"-->
<!--            app:popUpToInclusive="true"/>-->
    </fragment>
    <fragment
        android:id="@+id/channel_fragment"
        android:name="com.wmt.setasringtones.fragments.bottomNav.ChannelFragment"
        android:label="@string/title_channel"
        tools:layout="@layout/fragment_channel" />
    <fragment
        android:id="@+id/category_fragment"
        android:name="com.wmt.setasringtones.fragments.bottomNav.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/settings_fragment"
        android:name="com.wmt.setasringtones.fragments.bottomNav.SettingFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />


</navigation>