<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/outer_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_9sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_4sdp">

        <LinearLayout
            android:id="@+id/linealayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linear_gradient_1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_tone_title"
                style="@style/semi_bold_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingTop="@dimen/_6sdp"
                android:paddingRight="@dimen/_8sdp"
                android:text="Heart Touching Ringtone in tamil Touching Ringtone in tamil" />

            <TextView
                android:id="@+id/tv_ringtone_user"
                style="@style/semi_bold_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingRight="@dimen/_8sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="By raiq"
                android:maxLines="1"
                android:ellipsize="end"
                />

            <TextView
                android:id="@+id/tv_downloads"
                style="@style/semi_bold_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_4sdp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingStart="@dimen/_6sdp"
                android:paddingEnd="@dimen/_7sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:text="120020 Downloads"
                android:maxLines="1"
                android:ellipsize="end"
                app:drawableStartCompat="@drawable/ic_white_download" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.chibde.visualizer.CircleBarVisualizer
                    android:id="@+id/visualizer"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
                <ImageView
                    android:id="@+id/iv_play_pause_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_53sdp"
                    android:elevation="@dimen/_50sdp"
                    android:src="@drawable/ic_white_play_btn"
                    android:tag="play"
                    app:layout_constraintTop_toTopOf="@id/visualizer"
                    app:layout_constraintLeft_toLeftOf="@id/visualizer"
                    app:layout_constraintRight_toRightOf="@id/visualizer"
                    app:layout_constraintBottom_toBottomOf="@id/visualizer"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:progress="50"
                android:progressTint="@color/white" />

            <TextView
                android:id="@+id/tv_ringtone_duration"
                style="@style/semi_bold_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:includeFontPadding="false"
                android:paddingLeft="@dimen/_17sdp"
                android:paddingRight="@dimen/_10sdp"
                android:maxLines="1"
                android:text="00/00"
                android:ellipsize="end"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:weightSum="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_set_audio_as"
                    style="@style/semi_bold_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_corners_4"
                    android:includeFontPadding="false"
                    android:padding="@dimen/_6sdp"
                    android:gravity="center"
                    android:layout_weight="0.5"
                    android:text="@string/set_as"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginEnd="@dimen/_12sdp"
                    app:drawableStartCompat="@drawable/ic_white_music"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/tv_share"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_share"
                    style="@style/semi_bold_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_corners_4"
                    android:gravity="center"
                    android:padding="@dimen/_6sdp"
                    android:layout_weight="0.5"
                    android:includeFontPadding="false"
                    android:text="@string/share"
                    android:maxLines="1"
                    android:ellipsize="end"
                    app:drawableStartCompat="@drawable/ic_share"
                    app:layout_constraintBottom_toBottomOf="@id/tv_set_audio_as"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_set_audio_as" />


            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.cunoraz.tagview.TagView
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_9sdp"
        android:layout_marginRight="@dimen/_9sdp"
        android:layout_marginBottom="@dimen/_9sdp"
        android:textAlignment="center"
        app:tagMargin="@dimen/_4sdp"
        app:textPaddingBottom="@dimen/_6sdp"
        app:textPaddingLeft="@dimen/_8sdp"
        app:textPaddingRight="@dimen/_8sdp"
        app:textPaddingTop="@dimen/_6sdp" />
    <include layout="@layout/banner_ad"/>

    <TextView
        style="@style/semi_bold_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:includeFontPadding="false"
        android:padding="@dimen/_10sdp"
        android:text="@string/related_ringtones"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>